--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,2 @@
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-cffi==1.15.0
-cryptography==37.0.2
 Django==4.0.5
-django-rest-knox==4.2.0
-djangorestframework==3.13.1
-pycparser==2.21
-pytz==2022.1
-sqlparse==0.4.2
+dadata==21.10.1
